# Curia

./: Launch_Robot.sh  map_with_can.pgm  map_with_can.yaml  map_without_can.pgm  map_without_can.yaml  my_map_dose.pgm  my_map_dose.yaml  my_map_no_dose.pgm  my_map_no_dose.yaml  testfile_can_search_from_mapping.py
BV_for_trafo/: board.json  calib.json  cam.json  diamond.json  track_aruco_marker.py
Camera_connection/: ConnectCameraSimple.py
CombiLidarCamera/: ExtentionLidarCamConfiguration.py  SearchCanProbabilityOnlyCam.py
Softwares/servo_test_programs/: readme.txt
Softwares/servo_test_programs/greifer_servo_test/: greifer_servo_test.ino
Softwares/servo_test_programs/lift_servo_test/: lift_servo_test.ino
Softwares/servo_test_programs/servo_routine_test/: servo_routine_test.ino
Softwares/servo_test_programs/servo_test/: servo_test.ino
dose_sammler/: CMakeLists.txt  package.xml
dose_sammler/config/: scan_filter.yaml
dose_sammler/launch/: dose_sammler.launch
dose_sammler/scripts/: encoder_odometry.py  frontier_exploration.py  keyboard_control.py  lidar_subscriber.py  main.py
dose_sammler/src/: checkIfCan.py  searchCan.py  searchCanCam.py
main/: LIDAR_fake_data.py  checkIfCan.py  collectLidarData.py  correctOffset.py  correctRot.py  driveBack.py  driveDefPath.py  driveToCan.py  gripper.py  inversKinematics.py  main.py  mapping.py  searchCan.py  searchCanCam.py  servoGripper.py  servoLift.py  setBack.py  stopRobot.py  updatePWM.py
main_ROS/: LIDAR_fake_data_ROS.py  checkIfCan_ROS.py  driveDefPath_ROS.py  driveToCan_ROS.py  gripper_ROS.py  inversKinematics_ROS.py  searchCanCam_ROS.py  stopRobot_ROS.py  updatePWM.py
src/dose_sammler/: CMakeLists.txt  package.xml
src/dose_sammler/scripts/: dose_main.py
src/dose_sammler/src/: collectLidarData_ROS.py  correctOffset_ROS.py  correctRot.py  driveBack_ROS.py  mapping.py  searchCan_ROS.py  setBack_ROS.py  updatePWM.py
steeringWheelExample/: steeringKeyboard.py  steeringMeccanumWheel.py
workspace/: Launch_Robot.sh  frames.gv
workspace/.catkin_tools/profiles/default/: build.yaml
workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
workspace/devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  local_setup.sh  setup.sh
workspace/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
workspace/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
workspace/devel/.private/dose_sammler/: .catkin
workspace/devel/.private/dose_sammler/lib/pkgconfig/: dose_sammler.pc
workspace/devel/.private/dose_sammler/share/dose_sammler/cmake/: dose_sammlerConfig.cmake
workspace/devel/.private/my_test_pkg/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
workspace/devel/.private/my_test_pkg/lib/pkgconfig/: my_test_pkg.pc
workspace/devel/.private/my_test_pkg/share/my_test_pkg/cmake/: my_test_pkgConfig.cmake
workspace/devel/.private/rplidar_ros/: .catkin
workspace/devel/.private/rplidar_ros/lib/pkgconfig/: rplidar_ros.pc
workspace/devel/.private/rplidar_ros/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
workspace/devel/.private/rplidar_ros/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
workspace/devel/lib/dose_sammler/: encoder_odometry.py  keyboard_control.py  main.py
workspace/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dose_sammler.pc  my_test_pkg.pc  rplidar_ros.pc
workspace/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
workspace/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
workspace/devel/share/dose_sammler/cmake/: dose_sammlerConfig-version.cmake  dose_sammlerConfig.cmake
workspace/devel/share/my_test_pkg/cmake/: my_test_pkgConfig-version.cmake  my_test_pkgConfig.cmake
workspace/devel/share/rplidar_ros/cmake/: rplidar_rosConfig-version.cmake  rplidar_rosConfig.cmake
workspace/logs/dose_sammler/: build.cmake.003.log.stderr
workspace/logs/rplidar_ros/: build.cmake.004.log.stderr  build.make.000.log.stderr
workspace/src/: test.py
workspace/src/dose_sammler/: CMakeLists.txt  RVIZ_default_setting.rviz  package.xml
workspace/src/dose_sammler/config/: scan_filter.yaml
workspace/src/dose_sammler/launch/: dose_sammler.launch
workspace/src/dose_sammler/scripts/: encoder_odometry.cpp  encoder_odometry.py  frontier_exploration.py  frontier_search.py  lidar_subscriber.py  main.py  start_program.sh
workspace/src/dose_sammler/src/: checkIfCan.py  searchCan.py  searchCanCam.py
workspace/src/rplidar_ros/rviz/: rplidar.rviz
