<?xml version="1.0"?>
<package format="2">
  <name>dose_sammler</name>
  <version>0.0.1</version>
  <description>ROS-Paket zur Detektion und Sammlung von Dosen mittels LIDAR und Kamera</description>
  
  <maintainer email="projekt.curia@fhgr.com">Projekt Curia</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- Note: WiringPi is required for GPIO handling -->
  <export>
  </export>
</package>
